--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
             <a href="index.html">
                 <img class=logo src="Bilder/RainyDays_Logo.png" alt="Rainy days logo"/>
             </a>
+            <nav>
+                <ul class="headerlist">
+                    <li><a href="index.html">Home</a> </li>
+                    <li><a href="jacketlist.html">Women's</a></li>
+                    <li><a href="jacketlist.html">Men's</a> </li>
+                    <li><a href="contact.html">Contact</a> </li>
+                    <li><a href="about.html">About</a> </li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul class="headerlist">
-                <li><a href="index.html">Home</a> </li>
-                <li><a href="jacketlist.html">Women's</a></li>
-                <li><a href="jacketlist.html">Men's</a> </li>
-                <li><a href="contact.html">Contact</a> </li>
-                <li><a href="about.html">About</a> </li>
-            </ul>
-        </nav>
     </header>
+
+    <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
 </body>
 </html>
