--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
     <header>
         <div class="headerbox">
-            <a href="index.html">
-                <img class=logo src="Bilder/RainyDays_Logo.png" alt="Rainy days logo"/>
-            </a>
             <nav>
                 <ul class="headerlist">
                     <li><a href="index.html">Home</a> </li>
@@ -21,9 +18,13 @@
                     <li><a href="about.html">About</a> </li>
                 </ul>
             </nav>
+            <a href="index.html">
+                <img class=logo src="Bilder/RainyDays_Logo.png" alt="Rainy days logo"/>
+            </a>
         </div>
     </header>
-
-    <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
+    <div class="heropicture">
+        <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
+    </div>
 </body>
 </html>
