--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </header>
     <div class="heropicture">
+        <button id="shop now" class="shopnowbutton" >Shop Now</button>
         <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
     </div>
 </body>
