picture in hero shot

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         </div>
     </header>
     <div class="heropicture">
+        <img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/>
+        <h1>Pushing the Comfort Zone</h1>
         <button id="shop now" class="shopnowbutton" >Shop Now</button>
         <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
     </div>
