shop now button

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         </div>
     </header>
     <div class="heropicture">
-        <img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/>
-        <h1>Pushing the Comfort Zone</h1>
-        <button id="shop now" class="shopnowbutton" >Shop Now</button>
-        <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
+            <img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/>
+            <h1>Pushing the Comfort Zone</h1>
+        <a href="jacketlist.html">
+            <button id="shop now" class="shopnowbutton" >Shop Now</button>
+        </a>
+            <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
     </div>
 </body>
 </html>
