--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div class="headerbox">
-            <nav>
+        <div id="logo">
                 <a href="index.html">
-                    <img class=logo src="Bilder/RainyDays_Logo.png" alt="Rainy days logo"/>
+                    <img src="Bilder/RainyDays_Logo.png" alt="Rainy days logo"/>
                 </a>
-                <ul class="headerlist">
-                    <li><a href="index.html">Home</a> </li>
-                    <li><a href="jacketlist.html">Women's</a></li>
-                    <li><a href="jacketlist.html">Men's</a> </li>
-                    <li><a href="contact.html">Contact</a> </li>
-                    <li><a href="about.html">About</a> </li>
-                </ul>
-            </nav>
+        </div>
+                <div id="menu-container">
+                    <label for="hamburger-menu">
+                      <i class="fas fa-bars"></i>
+                    </label>
+                    <input type="checkbox" id="hamburger-menu">
+                    <nav>
+                      <ul>
+                          <li><a href="index.html">Home</a></li>
+                          <li><a href="jacketlist.html">Men's</a></li>
+                          <li><a href="jacketlist.html">Womens's</a></li>
+                          <li><a href="about.html">About</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                      </ul>
+                    </nav>
+                  </div>
         </div>
     </header>
     <div class="heropicture">
