--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </div>
     </header>   
     <div class="heropicture">
-            <img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/>
-            <h1>Pushing the Comfort Zone</h1>
+            <a><img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/></a>
+            <a><h1>Pushing the Comfort Zone</h1></a>
         <a href="jacketlist.html">
             <button id="shop now" class="shopnowbutton" >Shop Now</button>
         </a>
-            <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
+            <a><img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/></a>
     </div>
 </body>
 </html>
