--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
     </header>
     <div class="contactsheet">
         <form>
+            <h2>Contact Us</h2>
             <div class="input-group">
                 <input type="text" id="name" required>
                 <label for="name"><i class="fa-regular fa-user"> </i> Your Name</label>
