--- a/contact.html
+++ b/contact.html
@@ -33,24 +33,23 @@
     </header>
     <div class="contactsheet">
         <form>
-            <h2>Contact Us</h2>
             <div class="input-group">
                 <input type="text" id="name" required>
-                <label for="name"><i class="fa-regular fa-user"> </i> Your Name</label>
+                <label for="name" class="field"><i class="fa-regular fa-user"> </i> Your Name</label>
             </div>
             <div class="input-group">
                 <input type="text" id="email" required>
-                <label for="email"><i class="fa-regular fa-envelope"> </i> Your Email</label>
+                <label for="email" class="field"><i class="fa-regular fa-envelope"> </i> Your Email</label>
             </div>
             <div class="input-group">
                 <input type="text" id="number" required>
-                <label for="number"><i class="fa-solid fa-phone"> </i> Phone No.</label>
+                <label for="number"class="field" ><i class="fa-solid fa-phone"> </i> Phone No.</label>
             </div>
             <div class="input-group">
                 <textarea id="message" rows="10" required></textarea>
-                <label for="message"><i class="fa-regular fa-message"> </i> Your Message</label>
+                <label for="message" class="field"><i class="fa-regular fa-message"> </i> Your Message</label>
             </div>
-            <button type="submit"><i class="fa-regular fa-paper-plane"></i> SUBMIT</button>
+            <button type="submit" id="field"><i class="fa-regular fa-paper-plane"></i> SUBMIT</button>
         </form>
             
             
