--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
     <header>
         <div id="logo">
                 <a href="index.html">
@@ -30,7 +31,8 @@
                     </nav>
                   </div>
         </div>
-    </header>   
+    </header>
+<main class="main-index">   
     <div class="heropicture">
             <a><img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/></a>
             <a><h1>Pushing the Comfort Zone</h1></a>
@@ -39,5 +41,22 @@
         </a>
             <a><img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/></a>
     </div>
+
+    <a href="jacketspecific.html">
+    <div class="jacket-container">
+            <img src="Bilder/RainyDays_Jacket1.jpg" alt="Orange and grey rain jacket">
+            <p class="jacketname">Rainy Days Mountain Jacket</p>
+            <p>500 USD</p>
+        <div class="color-container">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    </a>
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
