shop now button fixed

--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
     <div class="heropicture">
             <a><img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/></a>
             <a><h1>Pushing the Comfort Zone</h1></a>
-        <a href="jacketlist.html">
-            <button id="shop now" class="shopnowbutton" >Shop Now</button>
+        <a Class="button-container" href="jacketlist.html">
+            <button class="shopnowbutton">
+                <span class="shoptext">Shop Now</span>
+            </button>
         </a>
             <a><img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/></a>
     </div>
 
-    <a href="jacketspecific.html">
+    <a class="jacket-container-link" href="jacketspecific.html">
     <div class="jacket-container">
             <img src="Bilder/RainyDays_Jacket1.jpg" alt="Orange and grey rain jacket">
             <p class="jacketname">Rainy Days Mountain Jacket</p>
