pictures and coding

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <a class="jacket-container-link" href="jacketspecific.html">
     <div class="jacket-container">
-            <img src="Bilder/RainyDays_Jacket1.jpg" alt="Orange and grey rain jacket">
+            <img src="Bilder/RainyDays_Jacket6.png" alt="Orange and grey rain jacket">
             <p class="jacketname">Rainy Days Mountain Jacket</p>
             <p>500 USD</p>
         <div class="color-container">
