--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <a><img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/></a>
     </div>
 
+    <h2>Top Sellers</h2>
     <a class="jacket-container-link" href="jacketspecific.html">
     <div class="jacket-container">
             <img src="Bilder/RainyDays_Jacket6.png" alt="Orange and grey rain jacket">
