--- a/index.html
+++ b/index.html
@@ -45,18 +45,20 @@
     </div>
 
     <h2>Top Sellers</h2>
-    <a class="jacket-container-link" href="jacketspecific.html">
     <div class="jacket-container">
-            <img src="Bilder/RainyDays_Jacket6.png" alt="Orange and grey rain jacket">
-            <p class="jacketname">Rainy Days Mountain Jacket</p>
-            <p>500 USD</p>
-        <div class="color-container">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div>
+            <a href="jacketspecific.html">
+                <img src="Bilder/RainyDays_Jacket1.png" alt="Cycle jacket rain">
+                <p class="jacketname">Rainy Days Cycle Jacket</p>
+                <p>500 USD</p>
+            </a>
+            <div class="color-container">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
     </div>
-    </a>
 </main>
 <footer>
 
