herman iritere mæ

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </div>
 
     <h2>Top Sellers</h2>
-    <div class="jacket-container">
+    <section class="jacket-container">
         <div>
-            <a href="jacketspecific.html">
+            <a href="jacketlist.html">
                 <img src="Bilder/RainyDays_Jacket1.png" alt="Cycle jacket rain">
                 <p class="jacketname">Rainy Days Cycle Jacket</p>
                 <p>500 USD</p>
@@ -58,7 +58,7 @@
                 <div></div>
             </div>
         </div>
-    </div>
+      </section>
 </main>
 <footer>
 
