--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
       </section>
 </main>
 <footer>
+    <ul>
+        <h3>Nav</h3>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="Proucts.html">Products</a></li>  
+    </ul>
 
 </footer>
 </body>
