--- a/index.html
+++ b/index.html
@@ -61,12 +61,17 @@
       </section>
 </main>
 <footer>
-    <ul>
+    <ul class="footer-nav">
         <h3>Nav</h3>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
         <li><a href="Proucts.html">Products</a></li>  
+    </ul>
+
+    <ul class="footer-other">
+        <h3>Other</h3>
+        <li><a></a></li>
     </ul>
 
 </footer>
