--- a/index.html
+++ b/index.html
@@ -69,9 +69,15 @@
         <li><a href="Proucts.html">Products</a></li>  
     </ul>
 
+    <a href="index.html">
+        <img src="Bilder/RainyDays_Logo.png" alt="Logo">
+    </a>
+
     <ul class="footer-other">
         <h3>Other</h3>
-        <li><a></a></li>
+        <li><a>FAQ</a></li>
+        <li><a>Terms of Service</a></li>
+        <li><a>Return Policy</a></li>
     </ul>
 
 </footer>
