--- a/jacketlist.html
+++ b/jacketlist.html
@@ -33,6 +33,12 @@
         </div>
     </header>
     <main class="main-index">
+      <nav class="crumbs">
+        <ol>
+            <li class="crumb"><a href="index.html">Home Page</a></li>
+            <li class="crumb"><a href="jacketlist.html">Jackets</a></li>
+        </ol>
+      </nav>
       <div class="jackets">
         <section class="jacket-container">
           <div>
