--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       </section>
 </main>
 <footer>
-    <ul class="footer-nav">
+    <section class="footerlist-container">
+    <ul class="footer-left">
         <h3>Nav</h3>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -70,16 +71,16 @@
     </ul>
 
     <a href="index.html">
-        <img src="Bilder/RainyDays_Logo.png" alt="Logo">
+        <img src="Bilder/RainyDays_Logo.png" alt="Rainy Days Logo">
     </a>
 
-    <ul class="footer-other">
+    <ul class="footer-right">
         <h3>Other</h3>
         <li><a>FAQ</a></li>
         <li><a>Terms of Service</a></li>
         <li><a>Return Policy</a></li>
     </ul>
-
+    </section>
 </footer>
 </body>
 </html>
