--- a/index.html
+++ b/index.html
@@ -59,24 +59,27 @@
 </main>
 <footer>
     <section class="footerlist-container">
-    <ul class="footer-left">
-        <h3>Nav</h3>
+    <div class="footer-left">
+    <h3>Nav</h3>
+    <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
         <li><a href="Proucts.html">Products</a></li>  
     </ul>
+    </div>
 
     <a href="index.html">
         <img src="Bilder/RainyDays_Logo.png" alt="Rainy Days Logo">
     </a>
-
-    <ul class="footer-right">
-        <h3>Other</h3>
+    <div class="footer-right">
+    <h3>Other</h3>
+    <ul>
         <li><a>FAQ</a></li>
         <li><a>Terms of Service</a></li>
         <li><a>Return Policy</a></li>
     </ul>
+    </div>
     </section>
 </footer>
 </body>
