--- a/index.html
+++ b/index.html
@@ -59,28 +59,30 @@
 </main>
 <footer>
     <section class="footerlist-container">
-    <div class="footer-left">
-    <h3>Nav</h3>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="Proucts.html">Products</a></li>  
-    </ul>
-    </div>
-
-    <a href="index.html">
-        <img src="Bilder/RainyDays_Logo.png" alt="Rainy Days Logo">
-    </a>
-    <div class="footer-right">
-    <h3>Other</h3>
-    <ul>
-        <li><a>FAQ</a></li>
-        <li><a>Terms of Service</a></li>
-        <li><a>Return Policy</a></li>
-    </ul>
-    </div>
+        <h2>Nav</h2>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="jacketlist.html">Products</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="about.html">About Us</a></li>
+            </ul>
     </section>
+
+    
+
+    <section class="footerlist-container">
+        <h2>Other</h2>
+        <ul>
+            <li><a href="comingsoon.html">FAQ</a></li>
+            <li><a href="comingsoon.html">Return Policy</a></li>
+            <li><a href="comingsoon.html">Other</a></li>
+            <li><a href="comingsoon.html">Other</a></li>
+        </ul>
+        </section>
+
+        <a href="index.html">
+            <img src="Bilder/RainyDays_Logo.png"/>
+        </a>
 </footer>
 </body>
 </html>
