--- a/index.html
+++ b/index.html
@@ -58,31 +58,25 @@
       </section>
 </main>
 <footer>
-    <section class="footerlist-container">
-        <h2>Nav</h2>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="jacketlist.html">Products</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="about.html">About Us</a></li>
-            </ul>
-    </section>
-
-    
-
-    <section class="footerlist-container">
-        <h2>Other</h2>
-        <ul>
-            <li><a href="comingsoon.html">FAQ</a></li>
-            <li><a href="comingsoon.html">Return Policy</a></li>
-            <li><a href="comingsoon.html">Other</a></li>
-            <li><a href="comingsoon.html">Other</a></li>
-        </ul>
-        </section>
-
-        <a href="index.html">
-            <img src="Bilder/RainyDays_Logo.png"/>
-        </a>
+   <div class="col-1">
+    <h2>Useful Links</h2>
+    <a href="index.html">Home</a>
+    <a href="contact.html">Contact</a>
+    <a href="about.html">About Us</a>
+    <a href="jacketlist.html">Products</a>
+   </div>
+   <div class="col-2">
+    <h2>Newletter</h2>
+    <form>
+        <input type="email" placeholder="Your Email Adress" required>
+        <br>
+        <button type="submit">Subscribe Now!</button>
+    </form>
+   </div>
+   <div class="col-3">
+    <h2>Contact</h2>
+    <p>5056, Bergen. Norway</p>
+   </div>
 </footer>
 </body>
 </html>
