--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <h2>Top Sellers</h2>
-    <section class="jacket-container">
+    <div class="jacket-container">
         <div>
             <a href="jacketlist.html">
                 <img src="Bilder/RainyDays_Jacket1.png" alt="Cycle jacket rain">
@@ -55,7 +55,7 @@
                 <div></div>
             </div>
         </div>
-      </section>
+    </div>
 </main>
 <footer>
    <div class="col-1">
