--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
                     <img src="Bilder/RainyDays_Logo.png" alt="Rainy days logo"/>
                 </a>
         </div>
+
+       
+
                 <div id="menu-container">
                     <label for="hamburger-menu">
+                    <a href="cart.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
                       <i class="fas fa-bars"></i>
                     </label>
                     <input type="checkbox" id="hamburger-menu">
