--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
                     <img src="Bilder/RainyDays_Logo.png" alt="Rainy days logo"/>
                 </a>
         </div>
-
-       
-
                 <div id="menu-container">
                     <label for="hamburger-menu">
                     <a href="cart.html">
@@ -36,6 +33,7 @@
                       </ul>
                     </nav>
                   </div>
+                  <input type="text" placeholder="Search..." class="search-bar" required>
     </header>
 <main class="main-index">   
     <div class="heropicture">
