--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
                       </ul>
                     </nav>
                   </div>
-                  <input type="text" placeholder="Search..." class="search-bar" required>
+                <div class="search-container">
+                    <div>
+                        <input type="text" placeholder="..." class="search-bar" required>
+                        <a class="search-icon" href="jacketlist.html">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </a>
+                        
+                    </div>
+                </div>
     </header>
 <main class="main-index">   
     <div class="heropicture">
