footer and contact sheet

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<main>
     <header>
         <div id="logo">
                 <a href="index.html">
@@ -30,7 +31,33 @@
                     </nav>
                   </div>
     </header>
+
     <div class="contactsheet">
+    <div class="contacttext">   
+    <p>
+        We'd love to hear from you! 
+        Whether you have questions about our products, 
+        need assistance with an order, or simply want to say hello, 
+        our team is here to help. 
+        Feel free to reach out using the contact information below, 
+        and we'll get back to you as soon as possible.
+    </p>
+    <p>
+        Rainy Days
+        <br>
+        Torget 7
+        <br> 
+        Bergen, Norway, 5014
+        <br>
+        Rainy@days.com
+        <br>
+        +47 46671466
+    </p>
+    <p>
+        Thank you for choosing Rainy Days. 
+        We value your feedback and look forward to assisting you.
+    </p>
+    </div>
         <form>
             <div class="input-group">
                 <input type="text" id="name" required>
@@ -51,6 +78,38 @@
             <button type="submit" id="field"><i class="fa-regular fa-paper-plane"></i> SUBMIT</button>
         </form>
             
+
             
     </div>
+</main>
+<footer>
+    <div class="col-1">
+     <h2>Useful Links</h2>
+     <a href="index.html">Home</a>
+     <a href="contact.html">Contact</a>
+     <a href="about.html">About Us</a>
+     <a href="jacketlist.html">Products</a>
+    </div>
+    <div class="col-2">
+     <h2>Newletter</h2>
+     <form>
+         <input type="email" placeholder="Your Email Adress" required>
+         <br>
+         <button type="submit">Subscribe Now!</button>
+     </form>
+    </div>
+    <div class="col-3">
+     <h2>Contact</h2>
+         <p>Rainy Days
+             <br>
+             Torget 7
+             <br> 
+             Bergen, Norway, 5014
+             <br>
+             Rainy@days.com
+             <br>
+             +47 46671466
+         </p>
+    </div>
+ </footer>
 </body>
