--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
    </div>
    <div class="col-3">
     <h2>Contact</h2>
-    <p>5056, Bergen. Norway</p>
+        <p>Rainy Days
+            <br>
+            Torget 7
+            <br> 
+            Bergen, Norway, 5014
+            <br>
+            Rainy@days.com
+            <br>
+            +47 46671466
+        </p>
    </div>
 </footer>
 </body>
