--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<main>
+
     <header>
         <div id="logo">
                 <a href="index.html">
@@ -17,6 +17,9 @@
         </div>
                 <div id="menu-container">
                     <label for="hamburger-menu">
+                    <a href="cart.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
                       <i class="fas fa-bars"></i>
                     </label>
                     <input type="checkbox" id="hamburger-menu">
@@ -30,8 +33,17 @@
                       </ul>
                     </nav>
                   </div>
+                <div class="search-container">
+                    <div>
+                        <input type="text" placeholder="..." class="search-bar" required>
+                        <a class="search-icon" href="jacketlist.html">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </a>
+                        
+                    </div>
+                </div>
     </header>
-
+    <main>
     <div class="contactsheet">
     <div class="contacttext">   
     <p>
