--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"  content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
@@ -45,12 +45,12 @@
     </header>
 <main class="main-index">   
     <div class="heropicture">
-            <a><img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/></a>
-            <a><h1>Pushing the Comfort Zone</h1></a>
+            <img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/>
+            <h1>Pushing the Comfort Zone</h1>
         <a Class="button-container" href="jacketlist.html">
                 <span class="shoptext">Shop Now</span>
         </a>
-            <a><img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/></a>
+            <img class="hero" src="Bilder/herohome.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
     </div>
 
     <h2>Top Sellers</h2>
