--- a/jacketlist.html
+++ b/jacketlist.html
@@ -141,4 +141,34 @@
 
       </div>
     </main>
+    <footer>
+      <div class="col-1">
+       <h2>Useful Links</h2>
+       <a href="index.html">Home</a>
+       <a href="contact.html">Contact</a>
+       <a href="about.html">About Us</a>
+       <a href="jacketlist.html">Products</a>
+      </div>
+      <div class="col-2">
+       <h2>Newletter</h2>
+       <form>
+           <input type="email" placeholder="Your Email Adress" required>
+           <br>
+           <button type="submit">Subscribe Now!</button>
+       </form>
+      </div>
+      <div class="col-3">
+       <h2>Contact</h2>
+           <p>Rainy Days
+               <br>
+               Torget 7
+               <br> 
+               Bergen, Norway, 5014
+               <br>
+               Rainy@days.com
+               <br>
+               +47 46671466
+           </p>
+      </div>
+   </footer>
     </body>
