--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+    
     <header>
         <div id="logo">
                 <a href="index.html">
@@ -31,7 +31,8 @@
                     </nav>
                   </div>
         </div>
-    </header>
+</header>
+<main>
         <div class="about-text">
         <h2>About Us</h2>
             <p>
@@ -82,5 +83,37 @@
             Embrace the Rain. Elevate Your Style. Experience Rainy Days
             </P>
         </div>
-    
+</main>
+        <footer>
+            <div class="col-1">
+             <h2>Useful Links</h2>
+             <a href="index.html">Home</a>
+             <a href="contact.html">Contact</a>
+             <a href="about.html">About Us</a>
+             <a href="jacketlist.html">Products</a>
+            </div>
+            <div class="col-2">
+             <h2>Newletter</h2>
+             <form>
+                 <input type="email" placeholder="Your Email Adress" required>
+                 <br>
+                 <button type="submit">Subscribe Now!</button>
+             </form>
+            </div>
+            <div class="col-3">
+             <h2>Contact</h2>
+                 <p>Rainy Days
+                     <br>
+                     Torget 7
+                     <br> 
+                     Bergen, Norway, 5014
+                     <br>
+                     Rainy@days.com
+                     <br>
+                     +47 46671466
+                 </p>
+            </div>
+         </footer>
 </body>
+</html>
+
