--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                           <li><a href="jacketlist.html">Womens's</a></li>
                           <li><a href="about.html">About</a></li>
                           <li><a href="contact.html">Contact</a></li>
+                          <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                       </ul>
                     </nav>
                   </div>
