--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -16,7 +16,7 @@
         </div>
                 <div id="menu-container">
                     <label for="hamburger-menu">
-                    <a href="cart.html">
+                    <a class="cartbutton" href="cart.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                       <i class="fas fa-bars"></i>
@@ -29,7 +29,7 @@
                           <li><a href="jacketlist.html">Womens's</a></li>
                           <li><a href="about.html">About</a></li>
                           <li><a href="contact.html">Contact</a></li>
-                          <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                          <a id="cartmenu" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                       </ul>
                     </nav>
                   </div>
@@ -73,6 +73,7 @@
             it's your go-to choice for chilly days. 
             Stay comfortable and fashionable all season. 
         </p>
+        <p class="price">USD 250</p>
         <hr>
         <a href="cart.html">Add to cart</a>
     </div>
