--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
         </div>
                 <div id="menu-container">
                     <label for="hamburger-menu">
+                    <a class="cartbutton" href="cart.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
                       <i class="fas fa-bars"></i>
                     </label>
                     <input type="checkbox" id="hamburger-menu">
@@ -27,11 +30,20 @@
                           <li><a href="jacketlist.html">Womens's</a></li>
                           <li><a href="about.html">About</a></li>
                           <li><a href="contact.html">Contact</a></li>
+                          <a id="cartmenu" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                       </ul>
                     </nav>
                   </div>
-        </div>
-</header>
+                <div class="search-container">
+                    <div>
+                        <input type="text" placeholder="..." class="search-bar" required>
+                        <a class="search-icon" href="jacketlist.html">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </a>
+                        
+                    </div>
+                </div>
+    </header>
 <main>
         <div class="about-text">
         <h2>About Us</h2>
