--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
                 <div id="menu-container">
                     <label for="hamburger-menu">
-                    <a href="cart.html">
+                    <a class="cartbutton" href="cart.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                       <i class="fas fa-bars"></i>
@@ -30,7 +30,7 @@
                           <li><a href="jacketlist.html">Womens's</a></li>
                           <li><a href="about.html">About</a></li>
                           <li><a href="contact.html">Contact</a></li>
-                          <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                          <a id="cartmenu" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                       </ul>
                     </nav>
                   </div>
