--- a/cart.html
+++ b/cart.html
@@ -45,7 +45,39 @@
                 </div>
     </header>
     <main>
-          
+        <div class="cart-form">
+            <p>*Required Fields</p>
+            <form>
+                <input type="text" placeholder="First Name*" required>
+                <input type="text" placeholder="Last Name*" required>
+                <input type="Email" placeholder="Email Adress*" required>
+                <input type="text" placeholder="City*" required>
+                <input type="text" placeholder="Zip Code*" required>
+                <input type="text" placeholder="Adress Line*" required>
+                <input type="number" placeholder="Phone Nr*" required>
+            </form>
+        </div>
+            <div class="checkout-box">
+                    <p>Order total:</p>
+                    <p>(Before tax)</p>
+                    <p>250.00 USD</p>
+                    <a href="checkout.html">Checkout</a>
+                <div class="cart-info">
+                        <img src="Bilder/RainyDays_Jacket7.png" alt="">
+                    <div>
+                        <h2>Rainy Days Fleece Sweater</h2>
+                        <p>Grey & Orange</p>
+                        <p>Size: L</p>
+                        <p>QTY: 1</p>
+                        <p>Estimated delivery 3-5 business days</p>
+                    </div>
+                </div>
+                <hr>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
         </div>
     </main>
     <footer>
