--- a/cart.html
+++ b/cart.html
@@ -73,10 +73,27 @@
                     </div>
                 </div>
                 <hr>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <div>
+                    <p>
+                        Item: Rainy Days Hike Jacket
+                        Premium Umbrella Price:
+                    </p>
+                    <p>
+                        $250.00 USD
+                    </p>
+                    <p>
+                        Subtotal: $250.00 USD
+                    </p>
+                    <p>
+                        Shipping: FREE
+                    </p>
+                    <p>
+                        Estimated Tax (8%): $20.00 USD
+                    </p>
+                    <p>
+                        Total Cost: $270.00 USD
+                    </p>
+                </div>
             </div>
         </div>
     </main>
