--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <main class="main-index">   
     <div class="heropicture">
             <img class="mntwhite" src="Bilder/mountains_white.png" alt="mountains from logo in white"/>
-            <h1>Pushing the Comfort Zone</h1>
+            <h1 class="slogan">Pushing the Comfort Zone</h1>
         <a Class="button-container" href="jacketlist.html">
                 <span class="shoptext">Shop Now</span>
         </a>
