--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -52,9 +52,12 @@
             <li class="crumb"><a href="jacketspecific.html">Rain Jacket</a></li>
         </ol>
       </nav>
-
+      
     <div class="clothes-container">
-        <img src="Bilder/RainyDays_Jacket7.png" alt="Product image of a jacket">
+        <div>
+            <h1 class="jacket-name">Rainy Days Fleece sweater</h1>
+            <img src="Bilder/RainyDays_Jacket7.png" alt="Product image of a jacket">
+        </div>
         <div class="color-container">
             <div></div>
             <div></div>
@@ -74,6 +77,22 @@
             Stay comfortable and fashionable all season. 
         </p>
         <p class="price">USD 250</p>
+        <hr>
+        
+        <div class="jacket-info">
+            <div>
+                <i class="fa-solid fa-temperature-three-quarters"></i>
+                <p>Keeps you warm to temperatures down to 0 degrees celcius</p>
+            </div>
+            <div>
+                <i class="fa-solid fa-feather"></i>
+                <p>Light touch to the skin, does not make you itchy. Soft fleece teknoliogy. </p>
+            </div>
+            <div>
+                <i class="fa-solid fa-weight-scale"></i>
+                <p>The light weight of the high quality material makes it easy to wear att all times. </p>
+            </div>
+        </div>
         <hr>
         <a href="cart.html">Add to cart</a>
     </div>
