jacket specific fix

--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -54,21 +54,24 @@
       </nav>
       
     <div class="clothes-container">
-        <div>
-            <h1 class="jacket-name">Rainy Days Fleece sweater</h1>
-            <img src="Bilder/RainyDays_Jacket7.png" alt="Product image of a jacket">
+        <div class="jacket-colorsize">
+            <div>
+                <h1 class="jacket-name">Rainy Days Fleece sweater</h1>
+                <img src="Bilder/RainyDays_Jacket7.png" alt="Product image of a jacket">
+            </div>
+            <div class="color-container">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="size-container">
+                <p>S</p>
+                <p>M</p>
+                <p>L</p>
+                <p>XL</p>
+            </div>
         </div>
-        <div class="color-container">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="size-container">
-            <p>S</p>
-            <p>M</p>
-            <p>L</p>
-            <p>XL</p>
-        </div>
+        <div class="jacket-info">
         <hr>
         <p>
             Experience ultimate warmth and style in our premium fleece jacket. 
@@ -78,8 +81,6 @@
         </p>
         <p class="price">USD 250</p>
         <hr>
-        
-        <div class="jacket-info">
             <div>
                 <i class="fa-solid fa-temperature-three-quarters"></i>
                 <p>Keeps you warm to temperatures down to 0 degrees celcius</p>
@@ -95,7 +96,7 @@
         </div>
         <hr>
         <a href="cart.html">Add to cart</a>
-    </div>
+        </div>
 
 </main>
 
