--- a/cart.html
+++ b/cart.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
     </header>
-    <main>
+    <main class="cart-main">
         <div class="cart-form">
             <p>*Required Fields</p>
             <form>
@@ -56,6 +56,14 @@
                 <input type="text" placeholder="Adress Line*" required>
                 <input type="number" placeholder="Phone Nr*" required>
             </form>
+            <p>
+                Lifetime Guarantee
+                Our products are fully warranted against defects in materials and workmanship with a lifetime guarantee. Exclusions apply*
+            </p>
+            <p>
+                Free Returns
+                Returns are easy! Everyone gets free online and in-store returns.
+            </p>
         </div>
             <div class="checkout-box">
                     <p>Order total:</p>
