--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -52,52 +52,52 @@
             <li class="crumb"><a href="jacketspecific.html">Rain Jacket</a></li>
         </ol>
       </nav>
-      
-    <div class="clothes-container">
-        <div class="jacket-colorsize">
-            <div>
-                <h1 class="jacket-name">Rainy Days Fleece sweater</h1>
-                <img src="Bilder/RainyDays_Jacket7.png" alt="Product image of a jacket">
+    <div class="jacket-main">
+        <div class="clothes-container">
+            <div class="jacket-colorsize">
+                <div>
+                    <h1 class="jacket-name">Rainy Days Fleece sweater</h1>
+                    <img src="Bilder/RainyDays_Jacket7.png" alt="Product image of a jacket">
+                </div>
+                <div class="color-container">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="size-container">
+                    <p>S</p>
+                    <p>M</p>
+                    <p>L</p>
+                    <p>XL</p>
+                </div>
             </div>
-            <div class="color-container">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div class="size-container">
-                <p>S</p>
-                <p>M</p>
-                <p>L</p>
-                <p>XL</p>
-            </div>
-        </div>
-        <div class="jacket-info">
-        <hr>
-        <p>
-            Experience ultimate warmth and style in our premium fleece jacket. 
-            Crafted from soft, high-quality fleece, 
-            it's your go-to choice for chilly days. 
-            Stay comfortable and fashionable all season. 
-        </p>
-        <p class="price">USD 250</p>
-        <hr>
-            <div>
-                <i class="fa-solid fa-temperature-three-quarters"></i>
-                <p>Keeps you warm to temperatures down to 0 degrees celcius</p>
-            </div>
-            <div>
-                <i class="fa-solid fa-feather"></i>
-                <p>Light touch to the skin, does not make you itchy. Soft fleece teknoliogy. </p>
-            </div>
-            <div>
-                <i class="fa-solid fa-weight-scale"></i>
-                <p>The light weight of the high quality material makes it easy to wear att all times. </p>
-            </div>
+            <div class="jacket-info">
             <hr>
-        <a href="cart.html">Add to cart</a>
+            <p>
+                Experience ultimate warmth and style in our premium fleece jacket. 
+                Crafted from soft, high-quality fleece, 
+                it's your go-to choice for chilly days. 
+                Stay comfortable and fashionable all season. 
+            </p>
+            <p class="price">USD 250</p>
+            <hr>
+                <div>
+                    <i class="fa-solid fa-temperature-three-quarters"></i>
+                    <p>Keeps you warm to temperatures down to 0 degrees celcius</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-feather"></i>
+                    <p>Light touch to the skin, does not make you itchy. Soft fleece teknoliogy. </p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-weight-scale"></i>
+                    <p>The light weight of the high quality material makes it easy to wear att all times. </p>
+                </div>
+                <hr>
+            <a href="cart.html">Add to cart</a>
+            </div> 
         </div>
-        
-        </div>
+    </div>
 
 </main>
 
