--- a/index.html
+++ b/index.html
@@ -55,17 +55,49 @@
     </div>
 
     <h2>Top Sellers</h2>
-    <div class="jacket-container">
-        <div>
-            <a href="jacketlist.html">
-                <img src="Bilder/RainyDays_Jacket1.png" alt="Cycle jacket rain">
-                <p class="jacketname">Rainy Days Cycle Jacket</p>
-                <p>500 USD</p>
-            </a>
-            <div class="color-container">
-                <div></div>
-                <div></div>
-                <div></div>
+    <div class="topsellers">
+        <div class="jacket-container">
+            <div>
+                <a href="jacketlist.html">
+                    <img src="Bilder/RainyDays_Jacket1.png" alt="Cycle jacket rain">
+                    <p class="jacketname">Rainy Days Cycle Jacket</p>
+                    <p>500 USD</p>
+                </a>
+                <div class="color-container">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="jacket-container">
+            <div>
+                <a href="jacketspecific.html">
+                    <img src="Bilder/RainyDays_Jacket7.png" alt="Fleece jacket rain">
+                    <p class="jacketname">Rainy Days Fleece Jacket</p>
+                    <p>250 USD</p>
+                </a>
+                <div class="color-container">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="jacket-container">
+            <div>
+                <a href="jacketspecific.html">
+                    <img src="Bilder/RainyDays_Jacket6.png" alt="Hiker jacket rain">
+                    <p class="jacketname">Rainy Days Hiker Jacket</p>
+                    <p>1500 USD</p>
+                </a>
+                <div class="color-container">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
         </div>
     </div>
