--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a id="cartmenu" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 <div class="search-container">
                     <div>
-                        <label for="search" id="sitesearch"></label>
+                        <label for="sitesearch">Search</label>
                         <input type="text" id="sitesearch" placeholder="..." class="search-bar" required>
                         <a class="search-icon" href="jacketlist.html">
                             <i class="fa-solid fa-magnifying-glass"></i>
