--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div>
                         <label for="sitesearch" class="sr-only">Search</label>
                         <input type="text" id="sitesearch" placeholder="..." class="search-bar" required>
-                        <a class="search-icon" href="jacketlist.html">
+                        <a class="search-icon" aria-label="Site Search bar" href="jacketlist.html">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </a>
                         
