shopping cart aria label

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                       </ul>
                     </nav>
                   </div>
-                <a id="cartmenu" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a id="cartmenu" aria-label="Shopping Cart" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 <div class="search-container">
                     <div>
                         <label for="sitesearch" class="sr-only">Search</label>
