--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
    <div class="col-2">
     <h2>Newletter</h2>
     <form>
-        <input type="email" placeholder="Your Email Adress" required>
+        <label for="newsemail" class="sr-only">Get newspaper on email </label>
+        <input type="email" class="newsemail" placeholder="Your Email Adress" required>
         <br>
         <button type="submit">Subscribe Now!</button>
     </form>
