--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </a>
         </div>
                 <div id="menu-container">
-                    <label for="hamburger-menu">
+                    <label for="hamburger-menu" aria-label="Site navigation menu">
                     <a class="cartbutton" href="cart.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                     </a>
