--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h2>Newletter</h2>
     <form>
         <label for="newsemail" class="sr-only">Get newspaper on email </label>
-        <input type="email" class="newsemail" placeholder="Your Email Adress" required>
+        <input type="email" id="newsemail" placeholder="Your Email Adress" required>
         <br>
         <button type="submit">Subscribe Now!</button>
     </form>
