hero image size fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <a Class="button-container" href="jacketlist.html">
                 <span class="shoptext">Shop Now</span>
         </a>
-            <img class="hero" src="Bilder/herohome_2.png" alt="Person standing in a forest while its raining with rain jacket"/>
+            <img class="hero" src="Bilder/herohome_4.jpg" alt="Person standing in a forest while its raining with rain jacket"/>
     </div>
 
     <h2>Top Sellers</h2>
