--- a/jacketlist.html
+++ b/jacketlist.html
@@ -7,6 +7,7 @@
     <meta name="description" content="List of Jackets and wear on the rainy days website">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -56,6 +57,7 @@
       </nav>
       <h1 class="jackettitle">Jackets</h1>
       <div class="jackets">
+        
         <div class="jacket-container">
           <div>
               <a href="jacketspecific.html">
