--- a/jacketlist.html
+++ b/jacketlist.html
@@ -7,7 +7,7 @@
     <meta name="description" content="List of Jackets and wear on the rainy days website">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
+    
 </head>
 <body>
 
@@ -38,7 +38,9 @@
               </div>
             <a id="cartmenu" aria-label="Shopping Cart" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
 </header>
-    <main class="main-index">
+
+<main class="main-index">
+
       <nav class="crumbs">
         <ol>
             <li class="crumb"><a href="index.html">Home Page</a></li>
@@ -46,13 +48,12 @@
         </ol>
       </nav>
       <h1 class="jackettitle">Jackets</h1>
-      <div class="jackets">
-        
 
+      <div id="productList"></div>
+      <script src="Javascript/script.js" defer></script>
+</main>
 
-      </div>
-    </main>
-    <footer>
+  <footer>
       <div class="col-1">
        <h2>Useful Links</h2>
        <a href="index.html">Home</a>
