--- a/jacketlist.html
+++ b/jacketlist.html
@@ -49,7 +49,9 @@
       </nav>
       <h1 class="jackettitle">Jackets</h1>
 
-      <div id="productList"></div>
+      <div class="jacketlist-container">
+        <div id="productList"></div>
+      </div>
       <script src="Javascript/script.js" defer></script>
 </main>
 
