--- a/about.html
+++ b/about.html
@@ -26,11 +26,10 @@
                     <input type="checkbox" id="hamburger-menu">
                     <nav>
                       <ul>
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="jacketlist.html">Men's</a></li>
-                          <li><a href="jacketlist.html">Womens's</a></li>
-                          <li><a href="about.html">About</a></li>
-                          <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="jacketlist.html">Clothes</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                           
                       </ul>
                     </nav>
