--- a/jacketlist.html
+++ b/jacketlist.html
@@ -7,8 +7,8 @@
     <meta name="description" content="List of Jackets and wear on the rainy days website">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
-    <script src="Javascript/jacketList.js" defer></script>
-    <script src="Javascript/utils.js" defer></script>
+    <script type="module" src="Javascript/jacketList.js" defer></script>
+    <script type="module" src="Javascript/utils.js" defer></script>
     
 </head>
 <body>
