--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -6,6 +6,8 @@
     <title>Jacket specific</title>
     <meta name="description" content="A specific jacket">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <script type="module" src="Javascript/jacketDetails.js"></script>
+    <script type="module" src="Javascript/utils.js" defer></script>
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -45,7 +47,7 @@
             <li class="crumb"><a href="jacketspecific.html">Rain Jacket</a></li>
         </ol>
       </nav>
-      
+
     <div class="jacket-main">
        
     </div>
