--- a/jacketspecific.html
+++ b/jacketspecific.html
@@ -6,7 +6,7 @@
     <title>Jacket specific</title>
     <meta name="description" content="A specific jacket">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <script type="module" src="Javascript/jacketDetails.js"></script>
+    <script type="module" src="Javascript/jacketDetails.js" defer></script>
     <script type="module" src="Javascript/utils.js" defer></script>
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
 </head>
@@ -39,18 +39,7 @@
                 <a id="cartmenu" aria-label="Shopping Cart" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
     </header>
 
-<main>
-    <nav class="crumbs">
-        <ol>
-            <li class="crumb"><a href="index.html">Home Page</a></li>
-            <li class="crumb"><a href="jacketlist.html">Jackets</a></li>
-            <li class="crumb"><a href="jacketspecific.html">Rain Jacket</a></li>
-        </ol>
-      </nav>
-
-    <div class="jacket-main">
-       
-    </div>
+<main class="jacket-main">
 
 </main>
 
