--- a/jacketlist.html
+++ b/jacketlist.html
@@ -44,6 +44,12 @@
       
       <h1 class="jackettitle">Jackets</h1>
 
+      <select id="jacketFilter">
+        <option value="none">Select Filter</option>
+        <option value="Female">Female</option>
+        <option value="Male">Male</option>
+      </select>
+
       <div class="jacketlist-container">
         <div id="productList"></div>
       </div>
